--- a/repo_name/.devcontainer/devcontainer.json
+++ b/repo_name/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-    "name": "ml_ops_assignment",
+    "name": "project_name",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     "image": "mcr.microsoft.com/devcontainers/python:3.12-bullseye",
     "features": {},
@@ -17,8 +17,8 @@
                 "python.testing.pytestArgs": ["tests"],
                 "python.testing.unittestEnabled": false,
                 "python.testing.pytestEnabled": true,
-                "python.defaultInterpreterPath": "/workspaces/ml_ops_assignment/.venv/bin/python",
-                "python.testing.pytestPath": "/workspaces/ml_ops_assignment/.venv/bin/pytest"
+                "python.defaultInterpreterPath": "/workspaces/project_name/.venv/bin/python",
+                "python.testing.pytestPath": "/workspaces/project_name/.venv/bin/pytest"
             }
         }
     }
