--- a/repo_name/docs/mkdocs.yaml
+++ b/repo_name/docs/mkdocs.yaml
@@ -1,5 +1,5 @@
-site_name: ml_ops_assignment
-site_author: group_63
+site_name: project_name
+site_author: Your name (or your organization/company/team)
 docs_dir: source
 
 theme:
