--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dev = [
     "mkdocs-material==9.7.1",
     "mkdocstrings-python==2.0.1",
     "dvc>=3.66.1",
+    "dvc-gdrive>=3.0.1",
+    "dvc-gs>=3.0.2",
 ]
 
 
