--- a/configs/experiments/default.yaml
+++ b/configs/experiments/default.yaml
@@ -7,6 +7,8 @@ model:
   num_labels: 3  # Number of classes (0, 1, 2)
   dropout: 0.1  # Dropout rate for regularization
   hidden_size: 256  # Hidden size for the model
+  max_length: 512  # Maximum sequence length for tokenizer
+
 
 training:
   # Optimizer settings
