--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,4 +64,11 @@ files = ["src", "tests", "tasks.py"]
 ignore_missing_imports = true
 
 [tool.coverage.run]
+source = ["src"]
 omit = ["tests/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if __name__ == .__main__.:",
+]
